--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -30,7 +30,7 @@ set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${CMAKE_PROJECT_DESCRIPTION})
 if (NOT CPACK_PACKAGE_VERSION )
     set(CPACK_PACKAGE_VERSION ${CMAKE_PROJECT_VERSION})
 endif()
-set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-Qt${QT_DEFAULT_MAJOR_VERSION})
+set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION})
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYING.TXT")
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/preBuildCPack.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/preBuildCPack.cmake @ONLY)
@@ -146,7 +146,7 @@ elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
     endif()
     if(EXISTS "/usr/bin/rpmbuild")
         list(APPEND CPACK_GENERATOR "RPM")
-        set(CPACK_RPM_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-Qt${QT_DEFAULT_MAJOR_VERSION}-${CMAKE_SYSTEM_PROCESSOR}.rpm")
+        set(CPACK_RPM_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_PROCESSOR}.rpm")
     endif()
 else()
     set(OS_STRING ${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR})
@@ -157,7 +157,7 @@ if (CPACK_IFW_FRAMEWORK_VERSION)
     list(APPEND CPACK_PACKAGE_EXECUTABLES "ff7tk-install-tool;Modify ff7tk Install")
 endif()
 
-set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-Qt${QT_DEFAULT_MAJOR_VERSION}-${OS_STRING}")
+set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${OS_STRING}")
 
 #Source Package
 set(CPACK_SOURCE_IGNORE_FILES "build" .directory .git* )
