--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -1,16 +1,12 @@
-find_package(Qt${QT_DEFAULT_MAJOR_VERSION} REQUIRED NO_MODULE COMPONENTS
+find_package(Qt6 REQUIRED NO_MODULE COMPONENTS
     Core
+    Core5Compat
+    Svg
     Quick
     Xml
-    Svg
 )
 
-if(${QT_DEFAULT_MAJOR_VERSION} MATCHES "6")
-    find_package(Qt6 COMPONENTS Core5Compat REQUIRED)
-endif()
-
 configure_file(ff7tkAbout.h.in ${CMAKE_CURRENT_BINARY_DIR}/ff7tkAbout.h @ONLY)
-
 
 set ( ff7tk_SRC
         crypto/aes.c
@@ -46,14 +42,6 @@ set (ff7tk_PublicLIBLINKS
       Qt::Svg
 )
 
-if(${QT_DEFAULT_MAJOR_VERSION} EQUAL "6")
-    set(ff7tk_PrivateLIBLINKS Qt6::Core5Compat)
-endif()
+set(ff7tk_PrivateLIBLINKS Qt::Core5Compat)
 
 MAKE_LIBRARY(ff7tk ff7tk)
-
-if(WIN32 AND CMAKE_COMPILER_IS_GNUCC)
-    target_compile_options(ff7tk PRIVATE -mno-ms-bitfields)
-elseif(APPLE)
-     target_compile_options(ff7tk PRIVATE -stdlib=libc++)
-endif()
